# workflow

./: .gitignore  README.md  analyze_cm1_growth.py  anomaly_detection_report.md  batch_content_extractor.py  business_csv_descriptive_report.md  business_definition.json  check_daily_refund.py  cm2_inference_report.md  cm2_repeat_buyer_analysis.py  cm2_repeat_buyer_detailed_report.md  cm_vehicle_presale_analysis_report_20250916_100829.md  cm_vehicle_presale_analysis_report_20250916_101609.md  cm_vehicle_presale_analysis_report_20250916_101808.md  cm_vehicle_presale_analysis_report_20250916_101939.md  complete_analysis_report.md  content_extractor_app.py  inference_statistics.py  intention_order_eda.md  main.py  metrics_columns_report.md  order_monitor.py  order_trend_analysis_report.md  order_trend_monitor.py  processed_order_data.parquet  pyproject.toml  sales_agent_analysis_report.md  sales_agent_specific_analysis.py  sales_agent_specific_analysis_report.md  structure_check_report.md  test_batch_extractor.py  test_lock_time_filter.py  test_repeat_buyer_fix.py  time_interval_analysis_report.md  verify_logic.py  vis.py
logic/: skills_intro.md  小样本推演.md  预售时间线.md
models/: cycle_conversion_correlation.html  deposit_effect_report.md  granger_subscription_lock_daily.html  granger_subscription_lock_daily_report.html  intention_binary_model.joblib  model_usage_guide.md  period_summary.html  psm_deposit_report.md
skills/: __init__.py  ab_comparison_analysis.py  bulk_filter_predict.py  cm2_product_order_counts.py  cm_period_comparison.py  cm_vehicle_presale_analysis.py  vis.py  (+18 more)
