[project]
name = "w35-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.0",
    "gradio>=5.44.1",
    "langgraph>=0.6.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psutil>=7.0.0",
    "pyarrow>=21.0.0",
]
